pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: command-demo-container
    image: debian
    command: ["echo"]
    args: ["hello azka", "welcome"]
  restartPolicy: OnFailure
