LoadBalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports: 
  - port: 80
    targetPort: 8080
    protocol: TCP
