service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
spec:
  type: ClusterIP
  selector:
    run: my-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
