ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azka-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: azkak8s.aab12.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-app-svc
              port:
                number: 8080
